src/App.css
@import url("./index.css");

.App {
    display: flex;
    flex-direction: column;
    gap: 4em;
    align-items: center;
}

.App-logo {
    width: 100%;
    pointer-events: none;
}

.App-header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
}
.attribution {
    text-align: center;
}
.App-link {
    color: #61dafb;
}

.app__card {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    padding: 2em;
    background-color: var(--white);
    border-radius: 15px;
    gap: 3em;
    width: 60%;
    transition: 0.3s ease-in-out;
}
@media (width <= 1022px) {
    .app__card {
        grid-template-columns: 1fr;
        gap: 2em;
        width: 100%;
    }
    #root {
        padding: 4em 0;
    }
}
.app__totals {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: var(--very-dark-cyan);
    padding: 2em;
    border-radius: 10px;
}
.total__text {
    display: flex;
    flex-direction: column;
}
.app__totals__amounts {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.5em;
}
.app__totals__amounts > div {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.app__totals__amounts p {
    color: var(--very-light-grayish-cyan);
}
.app__totals__amounts span {
    color: var(--dark-grayish-cyan);
    font-size: 13px;
}
.app__totals__amounts h2 {
    font-size: 2.5em;
    color: var(--strong-cyan);
}
.form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 2em;
}
.form > div {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
}
.form__input {
    display: flex;
    flex-direction: column;
}

#billInput::after {
    content: url("../public/icon-dollar.svg");
    width: 10px;
    height: 10px;
    top: 0;
}

.fieldset > div {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
    justify-items: center;
    gap: 10px;
}
.fieldset > div > div {
    width: 100%;
}
.select {
    display: block;
    background-color: var(--very-dark-cyan);
    color: var(--white);
    border-radius: 3px;
    width: 100%;
    text-align: center;
    padding: 7px 2px;
    transition: background-color 0.3s ease-in-out;
    transition: color 0.3s ease-in-out;
}
.custom {
    background-color: var(--very-light-grayish-cyan);
}
#custom {
    padding: 0;
    width: 100%;
    text-align: center;
}
.select input[type="radio"] {
    display: none;
}
.checked {
    background-color: var(--strong-cyan);
    color: var(--very-dark-cyan);
}

.reset__btn {
    background-color: var(--strong-cyan);
    padding: 8px 0;
    border: none;
    outline: none;
    border-radius: 3px;
}
.reset__btn:disabled {
    background-color: var(--very-dark-cyan-2);
}

